--- a/hello.html
+++ b/hello.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>YangHaoxiang - HomePage</title>
+        <title>Yang - HomePage</title>
         <link rel="stylesheet" href="style.css">
         
     </head>
     <body>
         <header>
-            <h1>Yang Here</h1>
+            <h1>YangHaoxiang</h1>
             <p>Welcome to my homepage</p>
         </header>
     <main>
@@ -21,6 +21,9 @@
         <h2> Contact:</h2>
         <p> WeChat:YangU31415926</p>
         <p> QQ: 1327375657</p> -->
+        <section id="about">
+            <h2> About Me</h2>
+            <img src="homepage.jpg" width="200" height="200">
         <section id="education">
             <h2> My Education Experience:</h2>
             <p> Undergraduate of HITsz/Major in Automation</p>
@@ -29,7 +32,27 @@
             <h2> My dream job:</h2>
             <p> Game Designing</p>
         </section>
-
+        <section id="contact">
+            <h2> Contact</h2>
+            <p> WeChat:YangU31415926</p>
+            <p> QQ: 1327375657</p>
+        </section>
+        <section id="note">
+            <h2> Note</h2>
+            <p> a html rookie and currently learning full stack </p>
+            <p> I will add a background image later</p>
+            <p>Check out my <a href="https://github.com/Yan9U/HomePage" target ="_blank">github profile</a>.</p>
+        </section>
+        <section id="skills">
+            <h2> Skills</h2>
+            <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JavaScript</li>
+                <li>Python</li>
+                <li>C++</li>
+            </ul>
+        </section>
     </main>
     <footer>
         <p>© 2025 YangHaoxiang</p>
